Stop using wrap-reverse
Previously, I used flex-wrap: wrap-reverse so that the nav turned into a
footer on narrow screens.

However, this creates very strange behaviour when navigating via
keyboard or assistive tech, because the DOM order and focus order do not
match the visual order.

I think it's better to just not use this. Instead, we can put the nav on
the right hand side so the order is the same regardless of whether the
content is laid out left to right or top to bottom.

--- a/assets/site.css
+++ b/assets/site.css
@@ -57,7 +57,7 @@ html {
 
 
   /*
-    Vertical spacings that are aligned with the medium font's line height
+    Vertical spacings that are aligned with the body line height
   */
   --vertical-space-1: calc(var(--font-size-medium) * var(--standard-line-height) * 1);
   --vertical-space-2: calc(var(--font-size-medium) * var(--standard-line-height) * 2);
@@ -148,7 +148,7 @@ h6 {
 
 /*
 A layout where the first child acts as a sidebar on wide screens,
-and a footer on narrow screens.
+and a header on narrow screens.
 
 Usage:
 
@@ -160,7 +160,7 @@ Usage:
 .optional-sidebar-layout {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap-reverse;
+  flex-wrap: wrap;
 }
 
 header {
